# ask-a-dietitian-rag-embedding

./: .env  .gitignore  Makefile  README.md  config.py  docker-compose.yaml  pyproject.toml
api/: config.py  main.py
api/migrations/: 0001-init.sql  __init__.py  migrator.py
embed/: main.py
embed/document_retrieval/: scrape.py
