[project]
name = "ask-a-dietitian-rag-embedding"
version = "0.1.0"
description = ""
authors = [
    {name = "Filbert Shi",email = "contact@filbert.io"}
]
license = {text = "AGPL-3.0 license"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "psycopg[binary] (>=3.2.9,<4.0.0)",
    "pymupdf4llm (>=0.0.27,<0.0.28)",
    "llama-index (>=0.12.50,<0.13.0)",
    "torch (>=2.7.1,<3.0.0)",
    "transformers (>=4.53.2,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
